syntax = "proto3";

package attachment;

message AttachmentCreateFileRequest {
    string Muid = 1;
    string FileName = 2;
}

message AttachmentCreateFileResponse {
    string Status = 1;
    string FilePath = 2;
}

message AttachmentFileDataRequest {
    string Data = 1;
}

message AttachmentFileDataResponse {
    string Status = 1;
}

service AttachmentCreateFile {
    rpc AttachmentCreateFile(AttachmentCreateFileRequest) returns (AttachmentCreateFileResponse) {}
}

service AttachmentPostTxn {
    rpc WriteAttachmentFile(stream AttachmentFileDataRequest) returns (AttachmentFileDataResponse) {}
}